[package]
name = "rsframe"
version = "0.1.9"
edition = "2021"
description = "An easy video editing library written in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/khaki-git/rsframe"
homepage = "https://github.com/khaki-git/rsframe"


[dependencies]
image = "0.25.5"
indicatif = "0.17.9"
rand = "0.8.5"
rayon = "1.10.0"
